--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@
 	</main>
 
 	<footer class="footer">
-		<p>Copyright &copy;NaN!</p>
+		<p class="copy">Copyright &copy;NaN!</p>
 		<div class="up-button">
+			up-button
 		</div>
 	</footer>
 
