add button footer with link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Crea tu CV online</title>
 </head>
 <body>
-	<header class="header">
+	<header id="header" class="header">
 		<p>NaN!</p>
 		<div class="menu-principal">
 			<div class="menu-rayas">
@@ -306,9 +306,9 @@
 	</main>
 
 	<footer class="footer">
+
 		<p class="copy">Copyright &copy;NaN!</p>
-		<div class="up-button">
-			up-button
+		<div class="up-button">  <a href="#header">up-button</a>
 		</div>
 	</footer>
 
