--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 </head>
 <body>
 	<header class="header">
-		<p>NaN!</p>
-		<div class="menu-principal">
+		<nav class="menu-principal">
 			<div class="menu-rayas">
 					<ul class="rayas">
 						<li><img class="minirayas" src="images/botonrayas.png" alt="Menú">
@@ -25,28 +24,12 @@
 								<li><a href="#skillsfiel">Habilidades</a></li>
 								<li><a href="#otherdetfiel">Otros datos de interés</a></li>
 							</ul>
-						</li>
+							<li><a href="*******">About us</a></li>
 					</ul>
-			</div>
-			<ul class="primera-lista">
-						<li> Completa tu CV
-							<ul class="menu-equipo">
-								<li> <a href="#persdetfiel"> Datos personales </a></li>
-								<li> <a href="#persdetextfiel"> Extracto </a></li>
-								<li> <a href="#edufiel"> Educación </a></li>
-								<li> <a href="#jobfiel"> Experiencia laboral </a></li>
-								<li> <a href="#skillsfiel"> Habilidades </a></li>
-								<li> <a href="#otherdetfiel"> Otros datos de interés </a></li>
-							</ul>
-						</li>
-						<li> <a href="************"> ******** </a></li>
-						<li><a href="*******">About us?</a></li>
-				</ul>
-						<a href="index.html"> <img class="minilogo" src="images/minilogo.jpg" alt="mini-logo-grupo"></a>
-		</div>
-			<div class="cabecera-full">
-						<img class="logo-cabecera" src="images/Logo****.jpg" alt="logo-equipo"/>
-			</div>
+			</nav>
+				<div class="cabecera-full">
+							<img class="logo-cabecera" src="imagenlogo.jpg" alt="logo-equipo"/>
+				</div>
 		</header>
 
 	<section class="text-principal">
