--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
 	<title>Crea tu CV online</title>
 </head>
 <body>
-<<<<<<< HEAD
-	<header class="header">
-		<nav class="menu-principal">
 
 	<header id="header" class="header">
-		<p>NaN!</p>
-		<div class="menu-principal">
-			<div class="menu-rayas">
+			<nav class="menu-rayas">
 					<ul class="rayas">
 						<li><img class="minirayas" src="images/botonrayas.png" alt="Menú">
 							<ul class="lista-rayas">
