add select but incomplete

--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
 						</div>
 						<div class="input-form">
 							<label for="education-year-end">Año de finalización</label>
-							<select id="education-year-end" name="education-year-end"></select>
+							<select id="education-year-end" name="education-year-end" onclick="yearDesplegable('')"></select>
+							<select id="education-year-end" name="education-year-end" onclick="yearDesplegable('education-year-end')"></select>
 						</div>
 						<div class="input-form">
 							<label for="education-extract">Descripción</label>
