Add years to select

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						</div>
 						<div class="input-form">
 							<label for="job-year-start">Año de inicio</label>
-							<select id="job-year-start" name="job-year-start"></select>
+							<select id="job-year-start" name="job-year-start" class="years"></select>
 						</div>
 						<div class="input-form">
 							<label for="job-month-end">Mes de final</label>
@@ -125,7 +125,7 @@
 						</div>
 						<div class="input-form">
 							<label for="job-year-end">Año de final</label>
-							<select id="job-year-end" name="job-year-end"></select>
+							<select id="job-year-end" name="job-year-end" class="years"></select>
 						</div>
 						<div class="input-form">
 							<label for="messjob-extract">Descripción del cargo</label>
@@ -160,11 +160,11 @@
 						</div>
 						<div class="input-form">
 							<label for="education-year-start">Año de inicio</label>
-							<select id="education-year-start" name="education-year-start"></select>
+							<select id="education-year-start" name="education-year-start" class="years"></select>
 						</div>
 						<div class="input-form">
 							<label for="education-year-end">Año de finalización</label>
-							<select id="education-year-end" name="education-year-end"></select>
+							<select id="education-year-end" name="education-year-end" class="years"></select>
 						</div>
 						<div class="input-form">
 							<label for="education-extract">Descripción</label>
