add month to selects

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						</div>
 						<div class="input-form">
 							<label for="job-month-start">Mes de inicio</label>
-							<select id="job-month-start" name="job-month-start"></select>
+							<select id="job-month-start" name="job-month-start" class="month"></select>
 						</div>
 						<div class="input-form">
 							<label for="job-year-start">Año de inicio</label>
@@ -116,7 +116,7 @@
 						</div>
 						<div class="input-form">
 							<label for="job-month-end">Mes de final</label>
-							<select id="job-month-end" name="job-month-end"></select>
+							<select id="job-month-end" name="job-month-end" class="month"></select>
 						</div>
 						<div class="input-form">
 							<label for="job-year-end">Año de final</label>
@@ -159,12 +159,7 @@
 						</div>
 						<div class="input-form">
 							<label for="education-year-end">Año de finalización</label>
-<<<<<<< HEAD
 							<select id="education-year-end" name="education-year-end" class="years"></select>
-=======
-							<select id="education-year-end" name="education-year-end" onclick="yearDesplegable('')"></select>
-							<select id="education-year-end" name="education-year-end" onclick="yearDesplegable('education-year-end')"></select>
->>>>>>> 37eeade47b2ac570b82a07d2d5e3013f79f6b655
 						</div>
 						<div class="input-form">
 							<label for="education-extract">Descripción</label>
