onmouse out over header

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 	<header id="header" class="header">
 			<nav class="menu-rayas">
-					<ul class="rayas">
-						<li><img class="minirayas" src="images/botonrayas.png" alt="Menú">
-							<ul class="lista-rayas">
+					<ul class="rayas" >
+						<li onmouseover="mostrarcapa()" onmouseout="ocultarcapa()">Menú
+							<ul id="menudespleg" class="lista-rayas">
 								<li><a href="#persdetfiel">Datos personales</a></li>
 								<li><a href="#persdetextfiel">Extracto</a></li>
 								<li><a href="#edufiel">Educación</a></li>
 								<li><a href="#jobfiel">Experiencia laboral</a></li>
 								<li><a href="#skillsfiel">Habilidades</a></li>
 								<li><a href="#otherdetfiel">Otros datos de interés</a></li>
-							</ul>
+							</li></ul>
 							<li><a href="*******">About us</a></li>
 					</ul>
 			</nav>
