--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 						</div>
 						<div class="input-form">
 							<label for="education-type-studies">Tipo de estudios</label>
-							<select id="education-type-studies" name="education-type-studies" required></select>
+							<select id="education-type-studies" name="education-type-studies" class="type-studies" required></select>
 						</div>
 						<div class="input-form">
 							<label for="education-institution">Centro de estudios</label>
