--- a/index.html
+++ b/index.html
@@ -96,35 +96,35 @@
 						</div>
 						<div class="input-form">
 							<label for="job">Puesto de trabajo:</label>
-							<input id="job" type="text" name="job">
+							<input id="job" type="text" name="job" onclick= "seleccionar('trabajo', 'Indica tu puesto de trabajo')">
 						</div>
 						<div class="input-form">
 							<label for="job-charge">Cargo:</label>
-							<input id="job-charge" type="text" name="job-charge">
+							<input id="job-charge" type="text" name="job-charge" onclick="seleccionar('cargo', 'Dime tu cargo')">
 						</div>
 						<div class="input-form">
 							<label for="job-bussines">Empresa:</label>
-							<input id="job-bussines" type="text" name="job-bussines">
+							<input id="job-bussines" type="text" name="job-bussines" onclick="seleccionar('empresa', 'Dime tu empresa')">
 						</div>
 						<div class="input-form">
 							<label for="job-month-start">Mes de inicio</label>
-							<select id="job-month-start" name="job-month-start" class="month"></select>
+							<select id="job-month-start" name="job-month-start" class="month" onclick="seleccionar('inicio-mes', 'Mes de inicio')"></select>
 						</div>
 						<div class="input-form">
 							<label for="job-year-start">Año de inicio</label>
-							<select id="job-year-start" name="job-year-start" class="years"></select>
+							<select id="job-year-start" name="job-year-start" class="years" onclick="seleccionar('inicio-año', 'Año de inicio')"></select>
 						</div>
 						<div class="input-form">
 							<label for="job-month-end">Mes de final</label>
-							<select id="job-month-end" name="job-month-end" class="month"></select>
+							<select id="job-month-end" name="job-month-end" class="month" onclick="seleccionar('fin-mes', 'Mes de final')"></select>
 						</div>
 						<div class="input-form">
 							<label for="job-year-end">Año de final</label>
-							<select id="job-year-end" name="job-year-end" class="years"></select>
+							<select id="job-year-end" name="job-year-end" class="years" onclick="seleccionar('fin-año', 'Año de final')"></select>
 						</div>
 						<div class="input-form">
 							<label for="messjob-extract">Descripción del cargo</label>
-							<textarea class="" id="job-extract" name="job-extract" rows="6" cols="40"></textarea>
+							<textarea class="" id="job-extract" name="job-extract" rows="6" cols="40" onclick="seleccionar('descripcion-trabajo', 'Describe tus funciones en el puesto')"></textarea>
 						</div>
 					</div>
 					<div class="input-form-open">
@@ -268,15 +268,16 @@
 			<section class="prev-professionalexperience">
 				<h2 class="prev-titles">Formación profesional<hr></h2>
 					<ul class="prev-jobdetails">
-						<li class="prev-jobdetails-charge"><span id="jobdetails-charge">Cargo: </span></li>
-						<li id="jobdetails-company" class="prev-jobdetails-company">Empresa: </li>
+						<li class="prev-jobdetails-job">Puesto de trabajo:  <span id="trabajo"></span></li>
+						<li class="prev-jobdetails-charge">Cargo:  <span id="cargo"></span></li>
+						<li id="jobdetails-company" class="prev-jobdetails-company">Empresa: <span id="empresa"></span></li>
 						<li class="prev-jobdetails-date">
 							<ul class="prev-jobdate">
-								<li id="jobdate-start" class="prev-jobdate-start">Fecha de inicio: </li>
-								<li id="jobdate-end" class="prev-jobdate-end">Fecha de final: </li>
+								<li id="jobdate-start" class="prev-jobdate-start">Fecha de inicio: <span id="inicio-mes"></span>/<span id="inicio-año"></span></li>
+								<li id="jobdate-end" class="prev-jobdate-end">Fecha de final: <span id="fin-mes"></span>/<span id="fin-año"></span></li>
 							</ul>
 						</li>
-						<li id="jobdetails-description" class="prev-jobdetails-description">Descripción del cargo: </li>
+						<li class="prev-jobdetails-description">Descripción del cargo: <span id="descripcion-trabajo"></span></li>
 					</ul>
 			</section>
 	</section>
