--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 								<li><a href="#skillsfiel">Habilidades</a></li>
 								<li><a href="#otherdetfiel">Otros datos de interés</a></li>
 							</li></ul>
-							<li><a href="*******">About us</a></li>
+							<li class="about-us"><a href="*******">About us</a></li>
 					</ul>
 			</nav>
 				<div class="cabecera-full">
-							<img class="logo-cabecera" src="imagenlogo.jpg" alt="logo-equipo"/>
+							<img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/>
 				</div>
 		</header>
 
