--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 							<li class="about-us"><a href="*******">About us</a></li>
 					</ul>
 			</nav>
-				<div class="cabecera-full">
+				<!--<div class="cabecera-full">-->
 							<img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/>
-				</div>
+				<!--</div>-->
 		</header>
 
 	<section class="text-principal">
