structure contact + basic styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<li><a href="#skillsfiel">Habilidades</a></li>
 								<li><a href="#otherdetfiel">Otros datos de interés</a></li>
 							</li></ul>
-							<li class="about-us"><a href="*******">About us</a></li>
+							<li class="about-us"><a href="about-us.html#header">About us</a></li>
 					</ul>
 			</nav>
 							<img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/>
