--- a/index.html
+++ b/index.html
@@ -13,25 +13,24 @@
 <body class="body">
 
 	<header id="header" class="header">
-			<nav class="menu-rayas">
+			<nav class="menu">
 					<ul class="rayas">
-						<li onmouseover="mostrarcapa()" onmouseout="ocultarcapa()">Menú
-							<ul id="menudespleg" class="lista-rayas">
-								<li><a href="#persdetfiel">Datos personales</a></li>
-								<li><a href="#persdetextfiel">Extracto</a></li>
-								<li><a href="#edufiel">Educación</a></li>
-								<li><a href="#jobfiel">Experiencia laboral</a></li>
-								<li><a href="#skillsfiel">Habilidades</a></li>
-								<li><a href="#otherdetfiel">Otros datos de interés</a></li>
-							</li></ul>
-							<li class="about-us"><a href="*******">About us</a></li>
-					</ul>
+						<li><img src="" alt="compartir"></li>
+						<li><img src="vista previa" alt=""></li>
+						<li><img src="imprimir" alt=""></li>
+						<li><img src="" alt="about us"></li>
+						<li>
+						<img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/></li>
+				</ul>
 			</nav>
-
-							<img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/>
-
 		</header>
-
+	<section class="personalizatucv">
+		<ul>
+			<li class="perscolor">Elige el color</li>
+			<li class="persfuente">Elige la fuente</li>
+			<li class="persestilo">Elige el estilo</li>
+		</ul>
+	</section>
 	<section class="text-principal">
 		<p>Crea tu propio CV</p>
 	</section>
