--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 	<header id="header" class="header">
 			<nav class="menu">
 					<ul class="rayas">
-						<li><img src="" alt="compartir"></li>
-						<li><img src="vista previa" alt=""></li>
-						<li><img src="imprimir" alt=""></li>
-						<li><img src="" alt="about us"></li>
-						<li>
-						<img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/></li>
+						<li><img class="compartir" src="images/compartir2.png" alt="compartir"></li>
+						<li><img class="preview" src="images/preview1.jpg" alt="vista previa"></li>
+						<li><img class="print" src="images/imprimir.jpg" alt="icono imprimir"></li>
+						<li><a href="about-us.html">About us</a></li>
+
 				</ul>
 			</nav>
+			<div>
+				<img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/></div>
 		</header>
 	<section class="personalizatucv">
 		<ul>
